--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -13,6 +13,7 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^1.7.7",
     "lucide-react": "^0.441.0",
+    "particles-bg": "^2.5.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
